# clip_experiments

./: .gitignore  README.md  clip_prediction.py  pyproject.toml  rope_clip_results.json
